--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ python-telegram-bot==13.15
 pandas==2.0.3
 numpy==1.24.3
 python-dotenv==1.0.0
-APScheduler==3.10.1
+APScheduler==3.6.3
+pytz==2023.3
